--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
     <div class="img">
       <img src="./img/LampadaOff.jpg" alt="Lâmpada" id="lamp">
     </div>
-    <div class="btn">
+    <div>
       <button id="ligar">Ligar</button>
       <button id="desligar">Desligar</button>
     </div>
   </main>
-
   <script src="./script.js"></script>
 </body>
 </html>
